--- a/OnlineChatBackend/OnlineChatBackend/Dockerfile
+++ b/OnlineChatBackend/OnlineChatBackend/Dockerfile
@@ -2,18 +2,28 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-COPY *.csproj ./
-RUN dotnet restore
+COPY OnlineChatBackend.csproj .
+RUN dotnet restore OnlineChatBackend.csproj
 
 COPY . .
-RUN dotnet publish -c Release -o /app
+RUN dotnet publish -c Release -o /app/publish
 
 # ---------- runtime stage ----------
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
-COPY --from=build /app ./
 
-ENV ASPNETCORE_URLS=http://+:8080
-EXPOSE 8080
+# утилита для проверки порта (nc)
+RUN apt-get update && apt-get install -y netcat-openbsd && rm -rf /var/lib/apt/lists/*
 
-ENTRYPOINT ["dotnet", "OnlineChatBackend.dll"]
+ENV ASPNETCORE_URLS=http://+:80
+# host/port БД внутри docker-compose сети
+ENV PGHOST=db
+ENV PGPORT=5432
+
+COPY --from=build /app/publish .
+COPY entrypoint.sh .
+RUN chmod +x entrypoint.sh
+
+EXPOSE 80
+
+ENTRYPOINT ["./entrypoint.sh"]
