--- a/online-chat/Dockerfile
+++ b/online-chat/Dockerfile
@@ -1,13 +1,21 @@
-# Dockerfile (prod)
+# ---------- build stage ----------
 FROM node:20-alpine AS build
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm ci
+RUN npm install
+
 COPY . .
 RUN npm run build
 
+# ---------- nginx stage ----------
 FROM nginx:alpine
-# SPA-фоллбек и прокси на API (если нужно) — см. ниже nginx.conf
-COPY --from=build /app/dist /usr/share/nginx/html
+WORKDIR /usr/share/nginx/html
+
+# свой конфиг nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# копируем сборку Vite
+COPY --from=build /app/dist ./
+
 EXPOSE 80
