--- a/online-chat/nginx.conf
+++ b/online-chat/nginx.conf
@@ -1,39 +1,37 @@
 server {
-  listen 80;
-  server_name _;
+    listen 80;
+    server_name _;
 
-  # где лежит собранный фронт
-  root /usr/share/nginx/html;
-  index index.html;
+    root /usr/share/nginx/html;
+    index index.html;
 
-  # --- Прокси для API: все /api/* уходим в backend по внутреннему имени "api:8080"
-  location /api/ {
-    proxy_pass http://api:8080;
+    location /swagger/ {
+        proxy_pass http://onlinechat-api:80/swagger/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
 
-    # пробрасываем важные заголовки
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    location /api/ {
+        proxy_pass http://onlinechat-api:80/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-    # (опционально) поддержка веб-сокетов, если они есть
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+    location /hubs/ {
+        proxy_pass http://onlinechat-api:80/hubs/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-    # отключить буферизацию, если стримишь ответы SSE
-    # proxy_buffering off;
-  }
-
-  # --- SPA fallback: чтобы F5/прямой переход по /route не давал 404
-  location / {
-    try_files $uri /index.html;
-  }
-
-  # (опционально) долгий кэш для статики с хэшами
-  location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
-    expires 1y;
-    add_header Cache-Control "public, immutable";
-    try_files $uri /index.html;
-  }
+    location / {
+        try_files $uri /index.html;
+    }
 }
