--- a/online-chat/nginx.conf
+++ b/online-chat/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name agoralounge.fun www.agoralounge.fun;
 
     root /usr/share/nginx/html;
     index index.html;
