--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,11 @@ services:
     container_name: onlinechat-web
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - api
+    volumes:
+    - /etc/letsencrypt:/etc/letsencrypt:ro
 
 
 volumes:
