--- a/online-chat/nginx.conf
+++ b/online-chat/nginx.conf
@@ -1,6 +1,12 @@
 server {
     listen 80;
     server_name agoralounge.fun www.agoralounge.fun;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 80;
+    server_name agoralounge.fun www.agoralounge.fun;
 
     root /usr/share/nginx/html;
     index index.html;
