--- a/online-chat/nginx.conf
+++ b/online-chat/nginx.conf
@@ -1,12 +1,17 @@
+# HTTP -> HTTPS
 server {
     listen 80;
     server_name agoralounge.fun www.agoralounge.fun;
     return 301 https://$host$request_uri;
 }
 
+# HTTPS
 server {
-    listen 80;
+    listen 443 ssl;
     server_name agoralounge.fun www.agoralounge.fun;
+
+    ssl_certificate     /etc/letsencrypt/live/agoralounge.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/agoralounge.fun/privkey.pem;
 
     root /usr/share/nginx/html;
     index index.html;
